--- a/downstream/modules/topologies/ref-cont-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-b-env-a.adoc
@@ -4,7 +4,7 @@
 The enterprise topology is intended for organizations that require {PlatformNameShort} to be deployed with redundancy or higher compute for large volumes of automation.
 
 == Infrastructure topology
-The following diagram outlines the infrastructure topology that Red Hat has tested with this deployment model that customers can use when self-managing {PlatformNameShort}:
+The following diagram outlines the infrastructure topology that Red{nbsp}Hat has tested with this deployment model that customers can use when self-managing {PlatformNameShort}:
 
 .Infrastructure topology diagram
 image::cont-b-env-a.png[Container enterprise topology diagram]
@@ -15,19 +15,19 @@ Each VM has been tested with the following component requirements: 16 GB RAM, 4 
 [options="header"]
 |====
 | VM count | Purpose | Example VM group names
-| 2 | Platform gateway with Redis | automationgateway 
-| 2 | {ControllerNameStart} | automationcontroller
-| 2 | {PrivateHubNameStart} with Redis | automationhub
-| 2 | {EDAName} with Redis | automationeda
-| 1 | {AutomationMeshStart} hop node | execution_nodes
-| 2 | {AutomationMeshStart} execution node | execution_nodes
+| 2 | {GatewayStart} with colocated Redis | `automationgateway` 
+| 2 | {ControllerNameStart} | `automationcontroller`
+| 2 | {PrivateHubNameStart} with colocated Redis | `automationhub`
+| 2 | {EDAName} with colocated Redis | `automationeda`
+| 1 | {AutomationMeshStart} hop node | `execution_nodes`
+| 2 | {AutomationMeshStart} execution node | `execution_nodes`
 | 1 | Externally managed database service | N/A
-| 1 | HAProxy load balancer in front of platform gateway (externally managed) | N/A
+| 1 | HAProxy load balancer in front of {Gateway} (externally managed) | N/A
 |====
 
 == Tested system configurations
 
-Red Hat has tested the following configurations to install and run {PlatformName}:
+Red{nbsp}Hat has tested the following configurations to install and run {PlatformName}:
 
 .Tested system configurations
 [options="header"]
@@ -45,7 +45,7 @@ a|
 
 == Network ports
 
-{PlatformName} uses several ports to communicate with its services. These ports must be open and available for incoming connections to the {PlatformName} server in order for it to work. Ensure that these ports are available and are not blocked by the server firewall.
+{PlatformName} uses several ports to communicate with its services. These ports must be open and available for incoming connections to the {PlatformName} server for it to work. Ensure that these ports are available and are not blocked by the server firewall.
 
 .Network ports and protocols
 [options="header"]
@@ -54,25 +54,25 @@ a|
 | 80/443 | TCP | HTTP/HTTPS | {EDAName} | {HubNameStart}
 | 80/443 | TCP | HTTP/HTTPS | {EDAName} | {ControllerNameStart}
 | 80/443 | TCP | HTTP/HTTPS | {ControllerNameStart} | {HubNameStart}
-| 443 | TCP | HTTPS | HAProxy load balancer | Platform gateway
-| 443 | TCP | HTTPS | Platform gateway | {ControllerNameStart}
-| 443 | TCP | HTTPS | Platform gateway | {HubNameStart}
-| 443 | TCP | HTTPS | Platform gateway | {EDAName}
+| 443 | TCP | HTTPS | HAProxy load balancer | {GatewayStart}
+| 443 | TCP | HTTPS | {GatewayStart} | {ControllerNameStart}
+| 443 | TCP | HTTPS | {GatewayStart} | {HubNameStart}
+| 443 | TCP | HTTPS | {GatewayStart} | {EDAName}
 | 5432 | TCP | PostgreSQL | {EDAName} | External database
-| 5432 | TCP | PostgreSQL | Platform gateway | External database 
+| 5432 | TCP | PostgreSQL | {GatewayStart} | External database 
 | 5432 | TCP | PostgreSQL | {HubNameStart} | External database
 | 5432 | TCP | PostgreSQL | {ControllerNameStart} | External database
 | 27199 | TCP | Receptor | {ControllerNameStart} | Hop node and execution node
 | 27199 | TCP | Receptor | Hop node | Execution node
 | 6379 | TCP | Redis | {EDAName} | Redis node
-| 6379 | TCP | Redis | Platform gateway | Redis node
-| 16379 | TCP | Redis | Redis | Redis cluster node
-| 8433 | TCP | HTTPS | Platform gateway | Platform gateway
-| 50051 | TCP | gRPC | Platform gateway | Platform gateway
+| 6379 | TCP | Redis | {GatewayStart} | Redis node
+| 16379 | TCP | Redis | Redis node | Redis node
+| 8433 | TCP | HTTPS | {GatewayStart} | {GatewayStart}
+| 50051 | TCP | gRPC | {GatewayStart} | {GatewayStart}
 |====
 
 == Example enterprise inventory file
-Use the following example inventory file to perform an installation for this topology: 
+Use the example inventory file to perform an installation for this topology: 
 
 [source,yaml,subs="+attributes"]
 ----
@@ -82,7 +82,7 @@ Use the following example inventory file to perform an installation for this top
 # or the Red Hat documentation:
 # https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation
 
-# This section is for your platform gateway hosts
+# This section is for your {Gateway} hosts
 # -----------------------------------------------------
 [automationgateway]
 gateway1.example.org
@@ -131,7 +131,7 @@ postgresql_admin_password=<set your own>
 registry_username=<your RHN username>
 registry_password=<your RHN password>
 
-# Platform gateway
+# {GatewayStart}
 # https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#ref-gateway-variables
 # -----------------------------------------------------
 gateway_admin_password=<set your own>
