AAP-33715 adding postgres db section

--- a/downstream/modules/platform/proc-operator-external-db-controller.adoc
+++ b/downstream/modules/platform/proc-operator-external-db-controller.adoc
@@ -12,7 +12,7 @@ Using an external database lets you share and reuse resources and manually manag
 
 [NOTE]
 ====
-The same external database (PostgreSQL instance) can be used for both {HubName} and {ControllerName} as long as the database names are different. In other words, you can have multiple databases with different names inside a single PostgreSQL instance.
+The same external database (PostgreSQL instance) can be used for both {HubName}, {ControllerName}, and {Gateway} as long as the database names are different. In other words, you can have multiple databases with different names inside a single PostgreSQL instance.
 ====
 
 The following section outlines the steps to configure an external database for your {ControllerName} on a {OperatorPlatformNameShort}.
