--- a/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
@@ -26,6 +26,7 @@ If you have the {OperatorPlatformNameShort} and some or all of the {PlatformName
 include::platform/proc-operator-link-components.adoc[leveloffset=+1]
 include::platform/proc-operator-access-aap.adoc[leveloffset=+1]
 include::platform/proc-operator-deploy-central-config.adoc[leveloffset=+1]
+include::platform/proc-operator-external-db-gateway.adoc[leveloffset=+1]
 include::platform/proc-operator-aap-faq.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
