--- a/downstream/modules/platform/proc-operator-external-db-gateway.adoc
+++ b/downstream/modules/platform/proc-operator-external-db-gateway.adoc
@@ -1,21 +1,20 @@
+[id="proc-operator-external-db-gateway"]
 
-[id="proc-operator-external-db-hub"]
-
-= Configuring an external database for {HubName} on {OperatorPlatformName}
+= Configuring an external database for {Gateway} on {OperatorPlatformName}
 
 [role="_abstract"]
 For users who prefer to deploy {PlatformNameShort} with an external database, they can do so by configuring a secret with instance credentials and connection information, then applying it to their cluster using the `oc create` command.
 
-By default, the {OperatorPlatformNameShort} automatically creates and configures a managed PostgreSQL pod in the same namespace as your {PlatformNameShort} deployment.
+By default, the {OperatorPlatformNameShort} automatically creates and configures a managed PostgreSQL pod in the same namespace as your {PlatformNameShort} deployment. You can deploy {PlatformNameShort} with an external database instead of the managed PostgreSQL pod that the {OperatorPlatformNameShort} automatically creates.
 
-You can choose to use an external database instead if you prefer to use a dedicated node to ensure dedicated resources or to manually manage backups, upgrades, or performance tweaks.
+Using an external database lets you share and reuse resources and manually manage backups, upgrades, and performance optimizations.
 
 [NOTE]
 ====
 The same external database (PostgreSQL instance) can be used for both {HubName}, {ControllerName}, and {Gateway} as long as the database names are different. In other words, you can have multiple databases with different names inside a single PostgreSQL instance.
 ====
 
-The following section outlines the steps to configure an external database for your {HubName} on a {OperatorPlatformNameShort}.
+The following section outlines the steps to configure an external database for your {Gateway} on a {OperatorPlatformNameShort}.
 
 .Prerequisite
 The external database must be a PostgreSQL database that is the version supported by the current release of {PlatformNameShort}.
@@ -27,7 +26,7 @@ The external database must be a PostgreSQL database that is the version supporte
 
 .Procedure
 
-The external postgres instance credentials and connection information will need to be stored in a secret, which will then be set on the {HubName} spec.
+The external postgres instance credentials and connection information must be stored in a secret, which is then set on the {Gateway} spec.
 
 . Create a `postgres_configuration_secret` YAML file, following the template below:
 +
@@ -57,13 +56,15 @@ type: Opaque
 ----
 $ oc create -f external-postgres-configuration-secret.yml
 ----
-. When creating your `AutomationHub` custom resource object, specify the secret on your spec, following the example below:
+. When creating your `AnsibleAutomationPlatform` custom resource object, specify the secret on your spec, following the example below:
 +
 ----
-apiVersion: automationhub.ansible.com/v1beta1
-kind: AutomationHub
+apiVersion: aap.ansible.com/v1alpha1
+kind: AnsibleAutomationPlatform
 metadata:
-  name: hub-dev
+  name: example-aap
+  Namespace: aap
 spec:
-  postgres_configuration_secret: external-postgres-configuration
+  database:
+     database_secret: automation-platform-postgres-configuration 
 ----
