--- a/downstream/modules/platform/proc-operator-upgrade.adoc
+++ b/downstream/modules/platform/proc-operator-upgrade.adoc
@@ -8,7 +8,7 @@ To upgrade to the latest version of {OperatorPlatformNameShort} on {OCPShort}, y
 
 * Read the link:{URLReleaseNotes}[{TitleReleaseNotes}] for 2.5 
 
-* [Optional] You need to deploy all of your {PlatformName} services ({ControllerNAme}, {HubName}, {EDAName}) to the same, single namespace before upgrading to 2.5 (only for existing deployments). For more information see, link:https://access.redhat.com/solutions/7092056[Migrating from one namespace to another] 
+* [Optional] You need to deploy all of your {PlatformName} services ({ControllerNAme}, {HubName}, {EDAName}) to the same, single namespace before upgrading to 2.5 (only for existing deployments). For more information see, link:https://access.redhat.com/solutions/7092056[Migrating from one namespace to another].
 * Review the link:{URLOperatorBackup}[{TitleOperatorBackup}] guide and backup your services:
 ** AutomationControllerBackup
 ** AutomationHubBackup
