Adding in KCS article required for event2 content (#2387)
* Adding in the KCS article

* PR suggestion

--- a/downstream/modules/platform/proc-operator-upgrade.adoc
+++ b/downstream/modules/platform/proc-operator-upgrade.adoc
@@ -7,8 +7,8 @@ To upgrade to the latest version of {OperatorPlatformNameShort} on {OCPShort}, y
 .Prerequisites 
 
 * Read the link:{URLReleaseNotes}[{TitleReleaseNotes}] for 2.5 
-// Need to track down KCS article
-//* [Optional] All of your AAP services (controller, hub, EDA) need to be deployed to the same, single namespace before upgrading to 2.5 (only for existing deployments). See KCS article to migrate from one namespace to another
+
+* [Optional] You need to deploy all of your {PlatformName} services ({ControllerNAme}, {HubName}, {EDAName}) to the same, single namespace before upgrading to 2.5 (only for existing deployments). For more information see, link:https://access.redhat.com/solutions/7092056[Migrating from one namespace to another].
 * Review the link:{URLOperatorBackup}[{TitleOperatorBackup}] guide and backup your services:
 ** AutomationControllerBackup
 ** AutomationHubBackup
