--- a/downstream/modules/platform/proc-install-cli-aap-operator.adoc
+++ b/downstream/modules/platform/proc-install-cli-aap-operator.adoc
@@ -65,7 +65,7 @@ This file creates a `Subscription` object called `_ansible-automation-platform_`
 oc apply -f sub.yaml
 -----
 +
-. Verify the CSV PHASE reports Succeeded before proceeding using the [command]`oc get csv -n ansible-automation-platform` command:
+. Verify the CSV PHASE reports "Succeeded" before proceeding using the [command]`oc get csv -n ansible-automation-platform` command:
 +
 -----
 oc get csv -n ansible-automation-platform
