--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -401,21 +401,25 @@
 :URLHubGettingStarted: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/getting_started_with_automation_hub
 :LinkHubGettingStarted: {URLHubGettingStarted}[{TitleHubGettingStarted}]
 //
+// titles/develop-automation-content
+:TitleDevelopAutomationContent: Developing Ansible automation content
+:URLDevelopAutomationContent: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/developing_ansible_automation_content
+:LinkDevelopAutomationContent: {URLDevelopAutomationContent}[{TitleDevelopAutomationContent}]
+//
 // titles/analytics/job-explorer
 :TitleAnalyticsJobExplorer: Evaluating your automation controller job runs using the job explorer
 :URLAnalyticsJobExplorer: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/evaluating_your_automation_controller_job_runs_using_the_job_explorer
 :LinkAnalyticsJobExplorer: {URLAnalyticsJobExplorer}[{TitleAnalyticsJobExplorer}]
 //
 // titles/analytics/automation-savings ; Using the automation calculator
+:TitleAnalyticsAutomationSavings: Using the automation calculator
+:URLAnalyticsAutomationSavings: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/using_the_automation_calculator
+:LinkAnalyticsSavings: {URLAnalyticsSavings}[{TitleAnalyticsSavings}]
+//
+// titles/analytics/automation-savings-planner ; Planning your automation jobs using the automation savings planner
 :TitleAnalyticsSavingsPlanner: Planning your automation jobs using the automation savings planner
 :URLAnalyticsSavingsPlanner: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/planning_your_automation_jobs_using_the_automation_savings_planner
 :LinkAnalyticsSavingsPlanner: {URLAnalyticsSavingsPlanner}[{TitleAnalyticsSavingsPlanner}]
-//
-//
-// titles/develop-automation-content
-:TitleDevelopAutomationContent: Developing Ansible automation content
-:URLDevelopAutomationContent: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/developing_ansible_automation_content
-:LinkDevelopAutomationContent: {URLDevelopAutomationContent}[{TitleDevelopAutomationContent}]
 //
 // titles/analytics/reports ; Viewing reports about your Ansible automation environment
 :TitleAnalyticsReports: Viewing reports about your Ansible automation environment
