--- a/titles/saas-aws/stories.adoc
+++ b/titles/saas-aws/stories.adoc
@@ -8,3 +8,4 @@ include::stories/assembly-saas-set-up.adoc[leveloffset=+1]
 include::stories/assembly-saas-subscribing.adoc[leveloffset=+1]
 include::stories/assembly-saas-post-install-config.adoc[leveloffset=+1]
 include::stories/assembly-saas-service-definition.adoc[leveloffset=+1]
+include::stories/assembly-saas-aap-best-practices.adoc[leveloffset=+1]
