--- a/stories/assembly-saas-aap-best-practices.adoc
+++ b/stories/assembly-saas-aap-best-practices.adoc
@@ -4,7 +4,7 @@ ifdef::context[:parent-context: {context}]
 [id="saas-aap-best-practices"]
 = {PlatformName} best practices
 
-This section covers Ansible Automation Platform product use that has specific content or context for using {PlatformNameShort} as a service.
+This section covers {PlatformNameShort} product use that has specific content or context for using {PlatformNameShort} as a service.
 
 include::topics/con-saas-automation-for-instance-groups.adoc[leveloffset=+1]
 include::topics/con-saas-sync-with-pah.adoc[leveloffset=+1]
