--- a/stories/topics/con-saas-sync-with-pah.adoc
+++ b/stories/topics/con-saas-sync-with-pah.adoc
@@ -1,7 +1,7 @@
 [id="con-saas-sync-with-pah"]
 
-= Syncing Content with {PrivateHubName}
+= Syncing content with {PrivateHubName}
 
 {PrivateHubNameStart} allows you to attempt to sync all content between {HubName} or {Galaxy}.
 However, this synchronization fails due to the storage and resource demands of such a large task.
-When syncing content from external sources, limit the synchronization to the collections your organization plans to use, focusing on recent or known-used versions to reduce the synchronization scope.
+When syncing content from external sources, limit the synchronization to the collections your organization plans to use, focusing on recent or known used versions to reduce the synchronization scope.
