--- a/downstream/modules/platform/con-hs-eda-controller.adoc
+++ b/downstream/modules/platform/con-hs-eda-controller.adoc
@@ -12,7 +12,7 @@ Hybrid node type:: Is a combination of the API node and the worker node.
 
 // This content is used in RPM installation
 ifdef::aap-install[]
-The following example shows how you would set up an inventory file for horizontal scaling of {EDAcontroller} on {RHEL} VMs using the host group name `[automationedacontroller]` and the node type variable `eda_node_type`:
+The following example shows how you can set up an inventory file for horizontal scaling of {EDAcontroller} on {RHEL} VMs using the host group name `[automationedacontroller]` and the node type variable `eda_node_type`:
 
 -----
 [automationedacontroller]
@@ -27,7 +27,7 @@ endif::aap-install[]
 
 // This content is used in Containerized installation
 ifdef::container-install[]
-The following example shows how you would set up an inventory file for horizontal scaling of {EDAcontroller} on {RHEL} VMs using the host group name `[automationeda]` and the node type variable `eda_node_type`:
+The following example shows how you can set up an inventory file for horizontal scaling of {EDAcontroller} on {RHEL} VMs using the host group name `[automationeda]` and the node type variable `eda_node_type`:
 
 -----
 [automationeda]
