Update Redis HA in Tested deployment models
Update the Redis HA and colocation information to clarify where you can and cannot colocate.

Topology updates for RPM Redis support

https://issues.redhat.com/browse/AAP-32331

--- a/downstream/modules/topologies/ref-cont-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-b-env-a.adoc
@@ -25,6 +25,11 @@ Each VM has been tested with the following component requirements: 16 GB RAM, 4 
 | 1 | HAProxy load balancer in front of {Gateway} (externally managed) | N/A
 |====
 
+[NOTE]
+====
+6 VMs are required for a Redis high availability (HA) compatible deployment. Redis can be colocated on each {PlatformNameShort} component VM except for {ControllerName}, execution nodes, or the PostgreSQL database.
+====
+
 == Tested system configurations
 
 Red{nbsp}Hat has tested the following configurations to install and run {PlatformName}:
