--- a/downstream/modules/topologies/ref-rpm-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-rpm-b-env-a.adoc
@@ -15,20 +15,19 @@ Each virtual machine (VM) has been tested with the following component requireme
 [options="header"]
 |====
 | VM count | Purpose | Example VM group names
-| 2 | {GatewayStart} | `automationgateway` 
+| 2 | {GatewayStart} with colocated Redis | `automationgateway` 
 | 2 | {ControllerNameStart} | `automationcontroller`
-| 2 | {PrivateHubNameStart} | `automationhub`
-| 2 | {EDAName} | `automationedacontroller`
+| 2 | {PrivateHubNameStart} with colocated Redis | `automationhub`
+| 2 | {EDAName} with colocated Redis | `automationedacontroller`
 | 1 | {AutomationMeshStart} hop node | `execution_nodes`
 | 2 | {AutomationMeshStart} execution node | `execution_nodes`
-| 6 | Redis | `redis`
 | 1 | Externally managed database service | N/A
 | 1 | HAProxy load balancer in front of {Gateway} (externally managed) | N/A
 |====
 
 [NOTE]
 ====
-6 VMs are required for a Redis high availability (HA) compatible deployment. Redis can be colocated on each {PlatformNameShort} component VM.
+6 VMs are required for a Redis high availability (HA) compatible deployment. Redis can be colocated on each {PlatformNameShort} component VM except for {ControllerName}, execution nodes, or the PostgreSQL database.
 ====
 
 == Tested system configurations
