fixes broken links and typos in managing automation content guide

--- a/downstream/modules/hub/proc-pull-image.adoc
+++ b/downstream/modules/hub/proc-pull-image.adoc
@@ -4,7 +4,7 @@
 
 
 [role="_abstract"]
-You can pull {ExecEnvName}s from the {HubName} remote registry to make a copy to your local machine.
+You can pull {ExecEnvName} from the {HubName} remote registry to make a copy to your local machine.
 
 .Prerequisites
 
@@ -12,7 +12,7 @@ You can pull {ExecEnvName}s from the {HubName} remote registry to make a copy to
 
 .Procedure
 
-. If you are pulling {ExecEnvName}s from a password or token-protected registry, xref:proc-create-credential[create a credential] before pulling the {ExecEnvName}.
+. If you are pulling {ExecEnvName} from a password or token-protected registry, xref:proc-create-credential[create a credential] before pulling the {ExecEnvName}.
 . From the navigation panel, select {MenuACExecEnvironments}.
 . Select your {ExecEnvName}.
 . In the *Pull this image* entry, click btn:[Copy to clipboard].
