--- a/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
+++ b/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
@@ -3,7 +3,7 @@
 
 = Pushing container images from your local environment
 
-Use the following procedure to sign {ExecEnvName}s on a local system and push those signed {ExecEnvName}s to the {HubName} registry.
+Use the following procedure to sign {ExecEnvName} on a local system and push those signed {ExecEnvName} to the {HubName} registry.
 
 .Procedure
 . From a terminal, log in to Podman, or any container client currently in use:
