--- a/downstream/modules/hub/proc-sync-image.adoc
+++ b/downstream/modules/hub/proc-sync-image.adoc
@@ -3,8 +3,8 @@
 [id="proc-sync-image-adoc_{context}"]
 = Syncing images from a container repository
 
-You can pull {ExecEnvName}s from the {HubName} remote registry to sync an image to your local machine.
-To sync an {ExecEnvName} from a remote registry, you must first configure a remote registry.
+You can pull {ExecEnvName} from the {HubName} remote registry to sync an image to your local machine.
+To sync an {ExecEnvNameSing} from a remote registry, you must first configure a remote registry.
 
 .Prerequisites
 
@@ -38,7 +38,7 @@ For example, if the upstream name is set to "alpine" and the *Name* field is "lo
 ====
 +
 . Set a list of tags to include or exclude.
-Syncing {ExecEnvName}s with a large number of tags is time consuming and uses a lot of disk space.
+Syncing {ExecEnvName} with a large number of tags is time consuming and uses a lot of disk space.
 
 [role="_additional-resources"]
 .Additional resources
