--- a/downstream/modules/hub/proc-tag-image.adoc
+++ b/downstream/modules/hub/proc-tag-image.adoc
@@ -5,11 +5,11 @@
 = Tagging container images
 
 [role="_abstract"]
-Tag {ExecEnvName}s to add an additional name to {ExecEnvName}s stored in your {HubName} container repository. If no tag is added to an {ExecEnvName}, {HubName} defaults to `latest` for the name.
+Tag {ExecEnvName} to add an additional name to {ExecEnvName} stored in your {HubName} container repository. If no tag is added to an {ExecEnvNameSing}, {HubName} defaults to `latest` for the name.
 
 .Prerequisites
 
-* You have *change {ExecEnvName} tags* permissions.
+* You have *change {ExecEnvNameSing} tags* permissions.
 
 .Procedure
 
