--- a/downstream/assemblies/hub/assembly-delete-container.adoc
+++ b/downstream/assemblies/hub/assembly-delete-container.adoc
@@ -19,7 +19,7 @@ You can delete repositories from the {PlatformName} interface in the *Execution 
 . When the confirmation message is displayed, click the checkbox and click btn:[Delete {ExecEnvShort}].
 
 .Verification
-* Return to the *{ExecEnvName}s* list view.
+* Return to the *{ExecEnvName}* list view.
 If the {ExecEnvName} has been successfully deleted, it will no longer be in the list.
 
 
