--- a/downstream/assemblies/hub/assembly-pull-image.adoc
+++ b/downstream/assemblies/hub/assembly-pull-image.adoc
@@ -6,7 +6,7 @@ ifdef::context[:parent-context: {context}]
 :context: pulling-images-container-repository
 
 [role="_abstract"]
-Pull {ExecEnvName}s from the {HubName} remote registry to make a copy to your local machine. 
+Pull {ExecEnvName} from the {HubName} remote registry to make a copy to your local machine. 
 {HubNameStart} provides the `podman pull` command for each `latest` {ExecEnvName} in the container repository. 
 You can copy and paste this command into your terminal, or use `podman pull` to copy an {ExecEnvName} based on an {ExecEnvName} tag.
 
