--- a/downstream/assemblies/hub/assembly-setup-container-repository.adoc
+++ b/downstream/assemblies/hub/assembly-setup-container-repository.adoc
@@ -11,7 +11,7 @@ ifdef::context[:parent-context: {context}]
 
 
 [role="_abstract"]
-When you set up your container repository, you must add a description, include a README, add teams that can access the repository, and tag {ExecEnvName}s.
+When you set up your container repository, you must add a description, include a README, add teams that can access the repository, and tag {ExecEnvName}.
 
 == Prerequisites to setting up your remote registry
 
