--- a/downstream/modules/hub/proc-add-group-to-container-repo.adoc
+++ b/downstream/modules/hub/proc-add-group-to-container-repo.adoc
@@ -1,9 +1,9 @@
 [id="providing-access-to-containers"]
 
-= Providing access to your {ExecEnvName}s
+= Providing access to your {ExecEnvName}
 
 [role="_abstract"]
-Provide access to your {ExecEnvName}s for users who need to work with the images.
+Provide access to your {ExecEnvName} for users who need to work with the images.
 Adding a team allows you to modify the permissions the team can have to the container repository.
 You can use this option to extend or restrict permissions based on what the team is assigned.
 
@@ -15,7 +15,7 @@ You can use this option to extend or restrict permissions based on what the team
 
 . Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACExecEnvironments}.
-. Select your {ExecEnvName}.
+. Select your {ExecEnvNameSing}.
 . From the *Team Access* tab, click btn:[Add roles].
 . Select the team or teams to which you want to grant access and click btn:[Next].
 . Select the roles that you want to add to this {ExecEnvShort} and click btn:[Next].
