--- a/downstream/modules/hub/proc-reject-collections.adoc
+++ b/downstream/modules/hub/proc-reject-collections.adoc
@@ -14,6 +14,6 @@ Collections requiring approval have the status *Needs review*.
 
 . From the navigation panel, select {MenuACAdminCollectionApproval}.
 . Find the collection you want to review in the list. You can also filter collections by Namespace, Repository, and Status using the search bar.
-. Click the thumbs down icon to approve and sign the collection. Confirm your choice in the modal that appears.
+. Click the thumbs down icon to reject the collection. Confirm your choice in the modal that appears.
 
 Collections you decline for publication are moved to the *Rejected* repository.
