--- a/downstream/modules/platform/con-gs-execution-env.adoc
+++ b/downstream/modules/platform/con-gs-execution-env.adoc
@@ -2,7 +2,7 @@
 
 = Build and use an {ExecEnvShort}
 
-All automation in Red Hat Ansible Automation Platform runs on container images called {ExecEnvName}s.
+All automation in Red Hat Ansible Automation Platform runs on container images called {ExecEnvName}.
 
 {ExecEnvNameStart} are consistent and shareable container images that serve as Ansible control nodes. 
 {ExecEnvNameStart} reduce the challenge of sharing Ansible content that has external dependencies. 
