peer review feedback

--- a/downstream/assemblies/hub/assembly-populate-container-registry.adoc
+++ b/downstream/assemblies/hub/assembly-populate-container-registry.adoc
@@ -10,12 +10,12 @@ ifdef::context[:parent-context: {context}]
 
 
 [role="_abstract"]
-By default, {PrivateHubName} does not include {ExecEnvShort}s.
-To populate your container registry, you must push a {ExecEnvShort} to it.
+By default, {PrivateHubName} does not include {ExecEnvName}.
+To populate your container registry, you must push an {ExecEnvShort} to it.
 
 You must follow a specific workflow to populate your {PrivateHubName} remote registry:
 
-* Pull {ExecEnvShort}s from the Red Hat Ecosystem Catalog (registry.redhat.io)
+* Pull {ExecEnvName} from the Red Hat Ecosystem Catalog (registry.redhat.io)
 * Tag them
 * Push them to your {PrivateHubName} remote registry
 
