--- a/downstream/modules/hub/proc-obtain-images.adoc
+++ b/downstream/modules/hub/proc-obtain-images.adoc
@@ -18,7 +18,7 @@ New Red Hat accounts automatically use Simple Content Access for their subscript
 
 .Prerequisites
 
-* You have permissions to pull {ExecEnvShort}s from registry.redhat.io.
+* You have permissions to pull {ExecEnvName} from registry.redhat.io.
 
 * A Red Hat account with Simple Content Access enabled.
 
@@ -26,7 +26,7 @@ New Red Hat accounts automatically use Simple Content Access for their subscript
 
 . If you need to access your manifest for your container images log in to link:https://console.redhat.com/subscriptions/manifests[Red Hat Console].
 
-. Click the three-dot menu for the manifest you need for your {ExecEnvShort}s, and click btn:[Export manifest].
+. Click the three-dot menu for the manifest you need for your {ExecEnvName}, and click btn:[Export manifest].
 
 . Log in to Podman by using your registry.redhat.io credentials:
 +
