moves assembly from upgrading 2.5 to 2.5x to Installing on OCP guide

--- a/downstream/assemblies/platform/assembly-update-ocp.adoc
+++ b/downstream/assemblies/platform/assembly-update-ocp.adoc
@@ -1,6 +1,6 @@
 [id="update-ocp"]
 
-= {PlatformNameShort} on {OCPShort}
+= Updating {PlatformNameShort} on {OCPShort}
 
 You can use an upgrade patch to update your operator-based {PlatformNameShort}.
 
