--- a/downstream/modules/platform/proc-update-aap-on-ocp.adoc
+++ b/downstream/modules/platform/proc-update-aap-on-ocp.adoc
@@ -1,5 +1,5 @@
 [id="update-aap-on-ocp"]
-= Updating {PlatformNameShort} on {OCPShort}
+= Patch updating {PlatformNameShort} on {OCPShort}
 
 When you perform a patch update for an installation of {PlatformNameShort} on {OCPShort}, most updates happen within a channel:
 
