--- a/downstream/titles/aap-operator-installation/master.adoc
+++ b/downstream/titles/aap-operator-installation/master.adoc
@@ -21,6 +21,8 @@ include::platform/assembly-operator-install-planning.adoc[leveloffset=+1]
 
 include::platform/assembly-install-aap-operator.adoc[leveloffset=+1]
 
+include::platform/assembly-update-ocp.adoc[leveloffset=+1]
+
 include::platform/assembly-installing-aap-operator-cli.adoc[leveloffset=+1]
 
 include::platform/assembly-configure-aap-operator.adoc[leveloffset=+1]
