--- a/downstream/titles/updating-aap/master.adoc
+++ b/downstream/titles/updating-aap/master.adoc
@@ -21,4 +21,4 @@ Upgrades from 2.4 to 2.5 are unsupported at this time. For more information, see
 
 include::platform/assembly-update-rpm.adoc[leveloffset=+1]
 include::platform/assembly-update-container.adoc[leveloffset=+1]
-include::platform/assembly-update-ocp.adoc[leveloffset=+1]
+// [hherbly]: moved to Installing on OCP guide per AAP-34122 include::platform/assembly-update-ocp.adoc[leveloffset=+1]
