Minor edits to user guide
Using automation execution guide post-GA edits

https://issues.redhat.com/browse/AAP-34521

Affects `titles/user-guide`

--- a/downstream/modules/platform/con-controller-overview-details.adoc
+++ b/downstream/modules/platform/con-controller-overview-details.adoc
@@ -24,7 +24,7 @@ If you want to give any user or team permissions to use a job template, you can 
 An auditor is useful for a service account that scrapes automation information from the REST API.
 
 .Additional resources
-* For more information about user roles, see link:{URLCentralAuth}/index#gw-managing-access[Managing access with role based access control].
+* For more information about user roles, see link:{URLCentralAuth}/gw-managing-access[Managing access with role based access control].
 
 = Cloud and autoscaling flexibility
 {ControllerNameStart} includes a powerful optional provisioning callback feature that enables nodes to request configuration on-demand.
@@ -51,13 +51,13 @@ Dynamic inventory support is available for OpenStack. With this you can target a
 For more information, see xref:ref-controller-credential-openstack[OpenStack credential type].
 
 = Remote command execution
-Use remote command execution to perform a simple tasks, such as adding a single user, updating a single security vulnerability, or restarting a failing service.
+Use remote command execution to perform a simple task, such as adding a single user, updating a single security vulnerability, or restarting a failing service.
 Any task that you can describe as a single Ansible play can be run on a host or group of hosts in your inventory. 
 You can manage your systems quickly and easily.
 Because of an RBAC engine and detailed audit logging, you know which user has completed a specific task.
 
 = System tracking
-You can collect facts using the fact caching feature. For more information, see xref:controller-fact-caching[Fact Caching].
+You can collect facts by using the fact caching feature. For more information, see xref:controller-fact-caching[Fact Caching].
 
 = Integrated notifications
 Keep track of the status of your automation.
@@ -134,7 +134,7 @@ This increases reliability, offers faster job completion, and improved cluster u
 
 For example, you can change a parameter across 15,000 switches at scale, or gather information across your multi-thousand-node RHEL estate.
 
-For more information, see xref:controller-job-slicing[Job Slicing].
+For more information, see xref:controller-job-slicing[Job slicing].
 
 = Support for deployment in a FIPS-enabled environment
 {ControllerNameStart} deploys and runs in restricted modes such as FIPS.
