--- a/downstream/modules/platform/con-controller-settings.adoc
+++ b/downstream/modules/platform/con-controller-settings.adoc
@@ -6,9 +6,9 @@ You can configure some {ControllerName} options by using the *Settings* menu of 
 
 The *Settings* page enables an administrator to configure the following:
 
-* link:{URLCentralAuth}/assembly-gw-settings#proc-controller-configure-subscriptions[Configuring Subscriptions]
+* link:{URLCentralAuth}/assembly-gw-settings#proc-controller-configure-subscriptions[Configuring subscriptions]
 * link:{URLCentralAuth}/assembly-gw-settings#proc-settings-platform-gateway[Platform gateway]
-* link:{URLCentralAuth}/assembly-gw-settings#proc-settings-user-preferences[User Preferences]
+* link:{URLCentralAuth}/assembly-gw-settings#proc-settings-user-preferences[User preferences]
 //* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/configuring_automation_execution/index#proc-controller-configure-subscriptions[System]
 * link:{URLControllerAdminGuide}/controller-config#controller-configure-jobs[Configuring jobs]
 * link:{URLControllerAdminGuide}/assembly-controller-logging-aggregation#proc-controller-set-up-logging[Setting up logging]
