Add Redis feedback from SME discussion
- Add updated topology diagrams
- Update Container growth inventory file to add ansible_connection=local and associated note
- Denote on the RPM mixed enterprise topology that colocation of Redis should be on 2.5 components

Topology updates for RPM Redis support

https://issues.redhat.com/browse/AAP-32331

--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -58,6 +58,8 @@ aap.example.org
 aap.example.org
 
 [all:vars]
+# Ansible
+ansible_connection=local
 
 # Common variables
 # {URLContainerizedInstall}/appendix-inventory-files-vars#ref-general-inventory-variables
