--- a/downstream/modules/topologies/ref-cont-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-a-env-a.adoc
@@ -103,6 +103,8 @@ aap.example.org
 aap.example.org
 
 [all:vars]
+# Ansible
+ansible_connection=local
 
 # Common variables
 # https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#ref-general-inventory-variables
@@ -144,3 +146,7 @@ eda_pg_host=aap.example.org
 eda_pg_password=<set your own>
 ----
 
+[NOTE]
+====
+SSH keys are only required when installing on remote hosts. If doing a self contained local VM based installation, you can use `ansible_connection=local`.
+====
