AAP-29859: Revise first two paragphs

--- a/downstream/titles/upgrade/master.adoc
+++ b/downstream/titles/upgrade/master.adoc
@@ -6,7 +6,7 @@
 include::attributes/attributes.adoc[]
 
 // Book Title
-= Upgrade and migration
+= RPM upgrade and migration
 
 include::{Boilerplate}[]
 
