--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -312,7 +312,7 @@
 :LinkEDAUserGuide: {URLEDAUserGuide}[{TitleEDAUserGuide}]
 //
 // titles/upgrade
-:TitleUpgrade: Upgrade and migration
+:TitleUpgrade: RPM upgrade and migration
 :URLUpgrade: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/upgrade_and_migration
 :LinkUpgrade: {URLUpgrade}[{TitleUpgrade}]
 //
