Minor fixes for PR 2431

--- a/downstream/modules/platform/proc-upgrade-controller-hub-eda-unified-ui.adoc
+++ b/downstream/modules/platform/proc-upgrade-controller-hub-eda-unified-ui.adoc
@@ -5,10 +5,10 @@
 [id="upgrade-controller-hub-eda-unified-ui_{context}"]
 = Automation controller and automation hub 2.4 and EDA 2.5 with unified UI upgrades
 
-{PlatformNameShort} 2.5 supports upgrades from {PlatformNameShort} 2.4 environments for all components, with the exception of EDA. You can also configure a mixed environment with {EDAName} from 2.5 connected to a legacy 2.4 cluster. Combining install methods (OCP, RPM, Containerized) within such a topology is not supported by {PlatformNameShort}.
+{PlatformNameShort} 2.5 supports upgrades from {PlatformNameShort} 2.4 environments for all components, with the exception of {EDAName}. You can also configure a mixed environment with {EDAName} from 2.5 connected to a legacy 2.4 cluster. Combining install methods (OCP, RPM, Containerized) within such a topology is not supported by {PlatformNameShort}.
 
 [NOTE]
-If you are running the 2.4 version of [EDAName] in production, before you upgrade, contact Red Hat support or your account represenative for more information on how to move to {PlatformNameShort} 2.5.
+If you are running the 2.4 version of {EDAName} in production, before you upgrade, contact Red Hat support or your account represenative for more information on how to move to {PlatformNameShort} 2.5.
 
 Supported topologies described in this document assume that:
 
