Update topology diagrams
Update the RPM topology diagrams to account for Redis

Create documentation for RPM growth topologies

https://issues.redhat.com/browse/AAP-32383

--- a/downstream/modules/topologies/ref-rpm-a-env-b.adoc
+++ b/downstream/modules/topologies/ref-rpm-a-env-b.adoc
@@ -4,12 +4,10 @@
 The growth topology is intended for organizations that are getting started with {PlatformNameShort} and do not require redundancy or higher compute for large volumes of automation. This topology allows for smaller footprint deployments. The mixed topology has different versions of {PlatformNameShort} intended for configuring a new installation of {EDAcontroller} 1.1 with {ControllerName} 4.4 or 4.5.
 
 == Infrastructure topology
+The following diagram outlines the infrastructure topology that Red{nbsp}Hat has tested with this deployment model that customers can use when self-managing {PlatformNameShort}:
 
-// Commenting this out for now as we don't yet have the diagram
-// The following diagram outlines the infrastructure topology that Red{nbsp}Hat has tested with this deployment model that customers can use when self-managing {PlatformNameShort}:
-
-// .Infrastructure topology diagram
-// image::<image-name.png>[RPM mixed growth topology diagram]
+.Infrastructure topology diagram
+image::rpm-a-env-b.png[RPM mixed growth topology diagram]
 
 Each virtual machine (VM) has been tested with the following component requirements: 16 GB RAM, 4 CPUs, 60 GB local disk, and 3000 IOPS. 
 
