Add-KCS-link: Article on fixing broken OIDC

--- a/downstream/modules/platform/proc-account-linking.adoc
+++ b/downstream/modules/platform/proc-account-linking.adoc
@@ -24,7 +24,7 @@ If you have completed the upgrade process and have a legacy {PlatformNameShort} 
 +
 [NOTE]
 ====
-If you are logging in using OIDC credentials, see link:LINK TBD
+If you are logging in using OIDC credentials, see link:https://access.redhat.com/solutions/7092980[How to fix broken OIDC redirect after upgrading to AAP 2.5].
 ====
 +
 . If you have successfully linked your account, the next screen shows your username with a green checkmark beside it. If you have other legacy accounts that you want to link, enter those account credentials and click btn:[Link] to link them to your centralized {Gateway} account.
