--- a/downstream/modules/platform/ref-controller-configs.adoc
+++ b/downstream/modules/platform/ref-controller-configs.adoc
@@ -11,6 +11,6 @@ See the following resources to explore additional {ControllerName} configuration
 | link:{LinkControllerGettingStarted} | Set up {ControllerName} and run your first playbook.
 | link:{LinkControllerAdminGuide} | Configure {ControllerName} administration through customer scripts, management jobs, etc.
 | link:{LinkAAPOperationsGuide} | Set up {ControllerName} with a proxy server.
-| link:{LinkAAPOperationsGuide}/assembly-controlling-data-collection[Managing usability analytics and data collection from {ControllerName}] | Manage what {ControllerName} information you share with Red Hat.
+| link:{URLAAPOperationsGuide}/assembly-controlling-data-collection[Managing usability analytics and data collection from {ControllerName}] | Manage what {ControllerName} information you share with Red Hat.
 | link:{LinkControllerUserGuide} | Review {ControllerName} functionality in more detail.
 |====
