AAP-34553 updating mirgration steps

--- a/downstream/modules/platform/proc-create-secret-key-secret.adoc
+++ b/downstream/modules/platform/proc-create-secret-key-secret.adoc
@@ -16,10 +16,10 @@ Otherwise, the migrated data remains encrypted and unusable after migration.
 apiVersion: v1
 kind: Secret
 metadata:
-  name: <resourcename>-admin-password
+  name: <resourcename>-secret-key
   namespace: <target-namespace>
 stringData:
-  password: mysuperlongpassword
+  secret-key: <content of /etc/tower/SECRET_KEY from old controller>
 type: Opaque
 -----
 +
