--- a/downstream/modules/platform/proc-aap-create_controller.adoc
+++ b/downstream/modules/platform/proc-aap-create_controller.adoc
@@ -14,6 +14,6 @@ Use the following steps to create an *AutomationController* custom resource obje
 . Click btn:[Create AutomationController]. You can create the object through the *Form view* or *YAML view*. The following inputs are available through the *Form view*.
 .. Enter a name for the new deployment.
 .. In *Advanced configurations*:
-... From the *Admin Password Secret* list, select your xref:create-secret-key-secret_aap-migration[secret key secret].
-... From the *Database Configuration Secret* list, select the xref:create-postresql-secret_aap-migration[postgres configuration secret].
+... From the *Secret Key* list, select your xref:create-secret-key-secret_aap-migration[secret key secret].
+... From the old *Database Configuration Secret* list, select the old xref:create-postresql-secret_aap-migration[postgres configuration secret].
 .. Click btn:[Create].
