AAP-34553 updating migration steps (#2470)

--- a/downstream/modules/platform/proc-aap-create_controller.adoc
+++ b/downstream/modules/platform/proc-aap-create_controller.adoc
@@ -11,9 +11,9 @@ Use the following steps to create an AutomationController custom resource object
 . Navigate to menu:Operators[Installed Operators].
 . Select the {OperatorPlatformNameShort} installed on your project namespace.
 . Select the *Automation Controller* tab.
-. Click btn:[Create AutomationController].
-. Enter a name for the new deployment.
-. In *Advanced configurations*, do the following:
-.. From the *Admin Password Secret* list, select your xref:create-secret-key-secret_aap-migration[secret key secret].
-.. From the *Database Configuration Secret* list, select the xref:create-postresql-secret_aap-migration[postgres configuration secret].
-. Click btn:[Create].
+. Click btn:[Create AutomationController]. You can create the object through the *Form view* or *YAML view*. The following inputs are available through the *Form view*.
+.. Enter a name for the new deployment.
+.. In *Advanced configurations*:
+... From the *Secret Key* list, select your xref:create-secret-key-secret_aap-migration[secret key secret].
+... From the old *Database Configuration Secret* list, select the old xref:create-postresql-secret_aap-migration[postgres configuration secret].
+.. Click btn:[Create].
