--- a/downstream/modules/platform/proc-create-secret-key-secret.adoc
+++ b/downstream/modules/platform/proc-create-secret-key-secret.adoc
@@ -15,10 +15,10 @@ To migrate your data to {OperatorPlatformNameShort} on {OCPShort}, you must crea
 apiVersion: v1
 kind: Secret
 metadata:
-  name: <resourcename>-admin-password
+  name: <resourcename>-secret-key
   namespace: <target-namespace>
 stringData:
-  password: mysuperlongpassword
+  secret-key: <content of /etc/tower/SECRET_KEY from old controller>
 type: Opaque
 -----
 +
